# buberdinner

./: README.md  pyproject.toml
buberdinner/api/: dependencies.py  main.py
buberdinner/api/core/: config.py  events.py
buberdinner/api/core/settings/: app.py  base.py  development.py  production.py  test.py
buberdinner/api/middleware/: __init__.py  error.py  validation.py
buberdinner/api/properties/: __init__.py  appsettings.dev.ini  appsettings.ini
buberdinner/api/v1/: __init__.py
buberdinner/api/v1/controllers/: __init__.py  authetication_controller.py
buberdinner/app/: dependencies.py
buberdinner/app/error/: __init__.py  error.py  problem.py  type_factory.py
buberdinner/app/result/: __init__.py  result.py
buberdinner/app/shared/: result.py
buberdinner/contracts/: authentication_response.py  value_object.py
buberdinner/contracts/authentication/: loginrequest.py  register_request.py
buberdinner/domain/entities/: __init__.py  user.py
buberdinner/domain/user/: __init__.py  user.py  user_id.py
buberdinner/infrastructure/authentication/: __init__.py  error.py  jwt_settings.py  jwt_token_generator.py
buberdinner/infrastructure/error/: __init__.py  error.py
buberdinner/infrastructure/persistence/: __init__.py  error.py  user_repository.py
buberdinner/infrastructure/services/: __init__.py  datetime_provider.py  error.py
buberdinner/schemas/authentication/: authentication_response.py  loginrequest.py  register_request.py  response.py
docs/: api.md  domain_models.md
requests/authentication/: login.http  register.http
(+33 files in other folders)
